tests/typing/fail/clock-08.stderr
error: clock error: the expression of the false branch has an incompatible clock type
 --> tests/typing/fail/clock-08.rs:8:22
  |
8 |             false => (2.0 when c) whennot c,
  |                      ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: its clock type starts with `base on c`
note: the clock type of c is `base`
 --> tests/typing/fail/clock-08.rs:6:27
  |
6 |         a : float = merge c {
  |                           ^
